# boykisser-os

./: .gitignore  Makefile  README.md  run.sh
boykernel/: .gitignore  Cargo.toml  Makefile  README.md  build.sh  run.sh  xxd.txt
boykernel/src/: beep.rs  bk_interrupts.rs  font.rs  framebuffer.rs  gop_render.rs  main.rs  memory.rs  panic.rs  serial.rs  strings.rs  utils.rs  watermark.rs
boyloader/: Cargo.toml  Makefile  build.sh
boyloader/src/: elf_garbage.rs  files.rs  framebuffer.rs  main.rs
esp/efi/boot/: bootx64.efi  boykernel
